--- a/Chest X-Ray/Chest X-Ray.ipynb
+++ b/Chest X-Ray/Chest X-Ray.ipynb
@@ -5,7 +5,12 @@
    "id": "1a364667",
    "metadata": {},
    "source": [
-    "# EXPLICAR DO QUE SE TRATA O PROJETO"
+    "## 🏥 Classificação de Doenças Pulmonares em Raios-X  \n",
+    "<br>\n",
+    "\n",
+    "#### Este projeto busca treinar uma rede neural convolucional (CNN) para classificar doenças pulmonares em imagens de raios-X. Foram explorados os dados, aplicadas técnicas de **pré-processamento** e **Data Augmentation**, e testados diferentes modelos com **TensorFlow/Keras**.  \n",
+    "\n",
+    "#### Entretanto, devido a **limitações computacionais**, o treinamento completo do modelo não foi viável, mesmo com otimizações e uso de plataformas na nuvem. Apesar disso, o projeto trouxe aprendizados importantes sobre **processamento de imagens médicas e machine learning**. "
    ]
   },
   {
